<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bcgn">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="65dp"
            android:src="@drawable/fot2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/forgot_password"
            android:fontFamily="@font/rubik_medium"
            android:textColor="@color/red"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img1"/>


        <TextView
            android:id="@+id/tv001"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/rubik_medium"
            android:lineSpacingExtra="2dp"
            android:text="@string/wait_we_are_sending_you_a_new_password_copy_the_password_from_your_email_address_if_not_received_check_your_spam_box"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <EditText
            android:id="@+id/emailforpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="45dp"
            android:hint="@string/enter_email"
            android:textColorHint="@color/red"
            android:padding="16dp"
            android:singleLine="true"
            android:textColor="@color/red"
            android:fontFamily="@font/rubik_regular"
            android:elevation="5dp"
            android:textSize="18sp"
            android:inputType="textEmailAddress"
            android:background="@drawable/custom_input"
            app:layout_constraintTop_toBottomOf="@id/tv001"
            tools:ignore="RtlSymmetry,TextFields"
            android:importantForAutofill="no" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resetbtn"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:text="@string/reset"
            android:elevation="5dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:fontFamily="@font/rubik_medium"
            android:background="@drawable/custom_button_red"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailforpass"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageView4"
            android:layout_width="193dp"
            android:layout_height="139dp"
            android:layout_gravity="center"
            android:layout_marginTop="152dp"
            android:foregroundGravity="center"
            android:src="@drawable/fot2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="Forgot Password?"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />


        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="27dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="26dp"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text='"Enter Your Registered Email"'
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <EditText
            android:id="@+id/emailforpass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/inpuut_bg"
            android:backgroundTint="#ffff"
            android:drawableLeft="@drawable/ic_baseline_email_2424"
            android:drawablePadding="3dp"
            android:ems="20"
            android:hint=" Email:"
            android:inputType="textPersonName|textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:shadowColor="#423D3D"
            android:textColor="#0A0B0B"
            android:textColorHighlight="#090909"
            android:textColorHint="#474545"
            android:textColorLink="#FAF3F3"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.627"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <Button
            android:id="@+id/resetbtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/inpuut_bg"
            android:text="RESET"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:backgroundTint="@color/design_default_color_error" />


    </LinearLayout>-->

</RelativeLayout>